fix - fixed buttons (notification, participants)
buttons were long and not fitting the size of the logo, issue was in the style.css file

--- a/Frontend/src/style.css
+++ b/Frontend/src/style.css
@@ -47,7 +47,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
   color: white;
-  width: 250px;
+  width: auto;
 }
 button:hover {
   border-color: #646cff;
